src/parser/PmmParser.java
// Generated from java-escape by ANTLR 4.11.1
package parser;

 /* TODO LO QUE PONGAIS AQUI SE COPIA EN LA CLASE pmmPARSER */
    import ast.*;
    import ast.Type.*;
    import ast.Statement.*;
    import ast.Expression.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
    import org.antlr.v4.runtime.tree.*;
import java.util.List;
    import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, TRASH=38, 
		REAL_CONSTANT=39, INT_CONSTANT=40, COMMENT=41, COMMENTVARIASLINEAS=42, 
		CHAR_CONSTANT=43, ID=44;
	public static final int
		RULE_program = 0, RULE_main = 1, RULE_definition = 2, RULE_parametros_funcion = 3, 
		RULE_return_func_tipo = 4, RULE_expression = 5, RULE_llamada_funcion = 6, 
		RULE_declaracion = 7, RULE_idents = 8, RULE_asignacion = 9, RULE_tipo = 10, 
		RULE_struct_fields = 11, RULE_struct_field = 12, RULE_contenido_bucle = 13, 
		RULE_statement = 14, RULE_expresiones_coma = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "main", "definition", "parametros_funcion", "return_func_tipo", 
			"expression", "llamada_funcion", "declaracion", "idents", "asignacion", 
			"tipo", "struct_fields", "struct_field", "contenido_bucle", "statement", 
			"expresiones_coma"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'main'", "'('", "')'", "':'", "'{'", "';'", "'}'", "','", 
			"'['", "']'", "'.'", "'-'", "'!'", "'*'", "'/'", "'%'", "'+'", "'=='", 
			"'!='", "'<'", "'>'", "'>='", "'<='", "'&&'", "'||'", "'='", "'double'", 
			"'char'", "'int'", "'struct'", "'return'", "'while'", "'if'", "'else'", 
			"'print'", "'input'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "TRASH", "REAL_CONSTANT", "INT_CONSTANT", "COMMENT", "COMMENTVARIASLINEAS", 
			"CHAR_CONSTANT", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> defaux = new ArrayList<Definition>();
		public DefinitionContext definition;
		public MainContext main;
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PmmParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(32);
					((ProgramContext)_localctx).definition = definition();
					 try {
					                            for (int i = 0; i < ((ProgramContext)_localctx).definition.ast.size(); i++) {
					                                _localctx.defaux.add(((ProgramContext)_localctx).definition.ast.get(i));
					                            }
					                    }catch(NullPointerException e){  }
					                  ; 
					}
					} 
				}
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(40);
			((ProgramContext)_localctx).main = main();
			  _localctx.defaux.add(((ProgramContext)_localctx).main.ast); 
			setState(42);
			match(EOF);
			((ProgramContext)_localctx).ast =  new Program(_localctx.defaux);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public Definition ast;
		public List<Statement> statements = new ArrayList<Statement>();
		public DeclaracionContext declaracion;
		public StatementContext statement;
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(T__0);
			setState(46);
			match(T__1);
			setState(47);
			match(T__2);
			setState(48);
			match(T__3);
			setState(49);
			match(T__4);
			setState(50);
			match(T__5);
			setState(57);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(51);
					((MainContext)_localctx).declaracion = declaracion();
					setState(52);
					match(T__6);
					 try {
					                  for(int i = 0; i < ((MainContext)_localctx).declaracion.ast.size(); i++){ _localctx.statements.add(((MainContext)_localctx).declaracion.ast.get(i));}}
					                 catch(NullPointerException e){} 
					}
					} 
				}
				setState(59);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 28273769734152L) != 0) {
				{
				{
				setState(60);
				((MainContext)_localctx).statement = statement();
				 try { for(int i = 0; i < ((MainContext)_localctx).statement.ast.size(); i++)
				            { _localctx.statements.add(((MainContext)_localctx).statement.ast.get(i));}} catch(NullPointerException e){} 
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(T__7);
			 ((MainContext)_localctx).ast =  new FunctionDefinition(_localctx.statements.get(0).getLine(), _localctx.statements.get(0).getColumn(), "main", _localctx.statements,
			                     new FunctionType(_localctx.statements.get(0).getLine(), _localctx.statements.get(0).getColumn(),
			                     new VoidType(), new ArrayList<VariableDefinition>())); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public List<Statement> statements = new ArrayList<Statement>();
		public DeclaracionContext declaracion;
		public Token ID;
		public Parametros_funcionContext parametros_funcion;
		public Return_func_tipoContext return_func_tipo;
		public StatementContext statement;
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public Return_func_tipoContext return_func_tipo() {
			return getRuleContext(Return_func_tipoContext.class,0);
		}
		public Parametros_funcionContext parametros_funcion() {
			return getRuleContext(Parametros_funcionContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definition);
		int _la;
		try {
			int _alt;
			setState(105);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				((DefinitionContext)_localctx).declaracion = declaracion();
				setState(72);
				match(T__6);
				 for (int i = 0; i < ((DefinitionContext)_localctx).declaracion.ast.size(); i++) {
				                            _localctx.ast.add(((DefinitionContext)_localctx).declaracion.ast.get(i));
				                        } 
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				match(T__0);
				setState(76);
				((DefinitionContext)_localctx).ID = match(ID);
				setState(77);
				match(T__2);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(78);
					((DefinitionContext)_localctx).parametros_funcion = parametros_funcion();
					}
				}

				setState(81);
				match(T__3);
				setState(82);
				match(T__4);
				{
				setState(83);
				((DefinitionContext)_localctx).return_func_tipo = return_func_tipo();
				}
				setState(84);
				match(T__5);
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(85);
						((DefinitionContext)_localctx).declaracion = declaracion();
						setState(86);
						match(T__6);
						 try {
						                                        for(int i = 0; i < ((DefinitionContext)_localctx).declaracion.ast.size(); i++){ _localctx.statements.add(((DefinitionContext)_localctx).declaracion.ast.get(i));}}
						                                     catch(NullPointerException e){} 
						}
						} 
					}
					setState(93);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((_la) & ~0x3f) == 0 && ((1L << _la) & 28273769734152L) != 0) {
					{
					{
					setState(94);
					((DefinitionContext)_localctx).statement = statement();
					 try {
					                        for(int i = 0; i < ((DefinitionContext)_localctx).statement.ast.size(); i++){ _localctx.statements.add(((DefinitionContext)_localctx).statement.ast.get(i));}}
					                     catch(NullPointerException e){} 
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(102);
				match(T__7);
				 List<VariableDefinition> parametros = new ArrayList<VariableDefinition>();
				               try { parametros =  ((DefinitionContext)_localctx).parametros_funcion.ast; } catch(NullPointerException e) {}
				              _localctx.ast.add(new FunctionDefinition(((DefinitionContext)_localctx).ID.getLine(), ((DefinitionContext)_localctx).ID.getCharPositionInLine()+1, (((DefinitionContext)_localctx).ID!=null?((DefinitionContext)_localctx).ID.getText():null), _localctx.statements,
				                    new FunctionType(((DefinitionContext)_localctx).ID.getLine(), ((DefinitionContext)_localctx).ID.getCharPositionInLine()+1, ((DefinitionContext)_localctx).return_func_tipo.ast, parametros))); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Parametros_funcionContext extends ParserRuleContext {
		public List<VariableDefinition> ast = new ArrayList<VariableDefinition>();
		public Token ID;
		public TipoContext tipo;
		public Parametros_funcionContext parametros_funcion;
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Parametros_funcionContext parametros_funcion() {
			return getRuleContext(Parametros_funcionContext.class,0);
		}
		public Parametros_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros_funcion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitParametros_funcion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Parametros_funcionContext parametros_funcion() throws RecognitionException {
		Parametros_funcionContext _localctx = new Parametros_funcionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parametros_funcion);
		try {
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				((Parametros_funcionContext)_localctx).ID = match(ID);
				setState(108);
				match(T__4);
				setState(109);
				((Parametros_funcionContext)_localctx).tipo = tipo();
				 _localctx.ast.add(new VariableDefinition(((Parametros_funcionContext)_localctx).ID.getLine(), ((Parametros_funcionContext)_localctx).ID.getCharPositionInLine()+1, ((Parametros_funcionContext)_localctx).tipo.ast, ((Parametros_funcionContext)_localctx).ID.getText())); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				((Parametros_funcionContext)_localctx).ID = match(ID);
				setState(113);
				match(T__4);
				setState(114);
				((Parametros_funcionContext)_localctx).tipo = tipo();
				setState(115);
				match(T__8);
				setState(116);
				((Parametros_funcionContext)_localctx).parametros_funcion = parametros_funcion();
				 ((Parametros_funcionContext)_localctx).parametros_funcion.ast.add
				                (new VariableDefinition(((Parametros_funcionContext)_localctx).ID.getLine(), ((Parametros_funcionContext)_localctx).ID.getCharPositionInLine()+1, ((Parametros_funcionContext)_localctx).tipo.ast, ((Parametros_funcionContext)_localctx).ID.getText()));
				                 ((Parametros_funcionContext)_localctx).ast =  ((Parametros_funcionContext)_localctx).parametros_funcion.ast;
				                
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Return_func_tipoContext extends ParserRuleContext {
		public Type ast;
		public TipoContext tipo;
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public Return_func_tipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_return_func_tipo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitReturn_func_tipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Return_func_tipoContext return_func_tipo() throws RecognitionException {
		Return_func_tipoContext _localctx = new Return_func_tipoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_return_func_tipo);
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				((Return_func_tipoContext)_localctx).tipo = tipo();
				 ((Return_func_tipoContext)_localctx).ast =  ((Return_func_tipoContext)_localctx).tipo.ast; 
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 2);
				{
				 ((Return_func_tipoContext)_localctx).ast =  new VoidType(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
